# frednator

./: CMakeLists.txt  README.md  controller.cpp  controller.hpp  frednatorData.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qiproject.xml  resources.qrc  unBoard.hpp  videoThread.cpp  videoThread.hpp
